<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ui_padding">

        <TextView
            android:id="@+id/tvTitu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ui_gap_big"
            android:text="@string/tit_form_crea"
            style="@style/UiTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nomb"
            style="@style/UiBody" />

        <EditText
            android:id="@+id/etNomb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nomb"
            android:inputType="textCapWords" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/ui_gap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_pais"
            style="@style/UiBody" />

        <Spinner
            android:id="@+id/spnPais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/ui_gap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_prec"
            style="@style/UiBody" />

        <EditText
            android:id="@+id/etPrec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_prec"
            android:inputType="numberDecimal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/ui_gap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_desc"
            style="@style/UiBody" />

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="top|start"
            android:hint="@string/hint_desc"
            android:inputType="textMultiLine"
            android:minLines="4" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/ui_gap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_imag"
            style="@style/UiBody" />

        <ImageView
            android:id="@+id/imgDest"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="@dimen/ui_gap"
            android:contentDescription="@string/acc_imag"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/ui_gap" />

        <Button
            android:id="@+id/btnGale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_gale"
            style="@style/UiButtonAlt" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/ui_gap_big" />

        <Button
            android:id="@+id/btnGuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_guar"
            style="@style/UiButton" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/ui_gap" />

        <Button
            android:id="@+id/btnCanc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_canc"
            style="@style/UiButtonDanger" />

    </LinearLayout>

</ScrollView>