<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_bg"
    android:orientation="vertical"
    android:padding="@dimen/ui_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tit_cata"
        style="@style/UiTitle" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_gap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAgre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_agre"
            style="@style/UiButton" />

        <Space
            android:layout_width="@dimen/ui_gap"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnCerr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cerr"
            style="@style/UiButtonDanger" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/ui_gap" />

    <TextView
        android:id="@+id/tvVaci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_sin_data"
        android:textColor="@color/ui_muted"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>